--- a/.github/workflows/run_ipea_dou_bot.yml
+++ b/.github/workflows/run_ipea_dou_bot.yml
@@ -1,8 +1,9 @@
 name: run_ipea_dou_bot
 # With suggestions from github.com/MarketingPipeline
 run-name: ${{ github.actor }} keeps updated with DOU changes at Ipea
-on: schedule:
-  - cron: '30 7 * * 1-5'
+on: 
+  schedule:
+    - cron: '30 7 * * 1-5'
 jobs:
   scrape:
     runs-on: ubuntu-latest
