--- a/.github/workflows/run_ipea_dou_bot.yml
+++ b/.github/workflows/run_ipea_dou_bot.yml
@@ -22,13 +22,22 @@ jobs:
       - name: Running python script
         run: python bot_dou.py
 
-      - name: Commit and Push The Results From Python Selenium Action
+      - name: Check if there are any changes
+        id: verify_diff
+        run: |
+          git diff --quiet . || echo "changed=true" >> $GITHUB_OUTPUT
+      
+      - name: Commit 
+        if: steps.verify_diff.outputs.changed == 'true'
         run: |
          git config --global user.name "github-actions[bot]"
          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
          git add -A
-         git commit -m "GitHub Actions Results added"
-         git push
+         git commit -m "DOU data updated!"
+
+      - name: Push
+        if: steps.verify_diff.outputs.changed == 'true'
+        run: git push
       
       
       
