--- a/.github/workflows/run_ipea_dou_bot.yml
+++ b/.github/workflows/run_ipea_dou_bot.yml
@@ -38,6 +38,31 @@ jobs:
       - name: Push
         if: steps.verify_diff.outputs.changed == 'true'
         run: git push
+
+      - name: Send email
+        if: steps.verify_diff.outputs.changed == 'true'
+        uses: dawidd6/action-send-mail@v3
+        with: 
+            server_address: smtp.gmail.com
+            # Server port, default 25:
+            server_port: 465
+            # Optional whether this connection use TLS (default is true if server_port is 465)
+            secure: true
+            # Optional (recommended) mail server username:
+            username: ${{secrets.MAIL_USERNAME}}
+            # Optional (recommended) mail server password:
+            password: ${{secrets.MAIL_PASSWORD}}
+            # Required mail subject:
+            subject: Ipea DOU bot has been updated
+            # Required recipients' addresses:
+            to: bb.cron.jobs@gmail.com
+            # Required sender full name (address can be skipped):
+            from: Outspacer
+            # Optional plain body:
+            body: Build job of ${{github.repository}} completed successfully!
+            ignore_cert: true
+            # Optional attachments:
+            attachments: README.md
       
       
       
