--- a/.github/workflows/run_ipea_dou_bot.yml
+++ b/.github/workflows/run_ipea_dou_bot.yml
@@ -44,10 +44,7 @@ jobs:
         uses: dawidd6/action-send-mail@v3
         with: 
             server_address: smtp.gmail.com
-            # Server port, default 25:
             server_port: 465
-            # Optional whether this connection use TLS (default is true if server_port is 465)
-            secure: true
             # Optional (recommended) mail server username:
             username: ${{secrets.MAIL_USERNAME}}
             # Optional (recommended) mail server password:
@@ -62,7 +59,7 @@ jobs:
             body: Build job of ${{github.repository}} completed successfully!
             ignore_cert: true
             # Optional attachments:
-            attachments: README.md
+            attachments: data/last.csv
       
       
       
