Editing sent e-mail content

--- a/.github/workflows/run_ipea_dou_bot.yml
+++ b/.github/workflows/run_ipea_dou_bot.yml
@@ -59,7 +59,7 @@ jobs:
             body: Build job of ${{github.repository}} completed successfully!
             ignore_cert: true
             # Optional attachments:
-            attachments: data/last.csv
+            attachments: README.md
       
       
       
